[package]
name = "lichao"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "Li-Chao tree implementation ported from the authors competitive programming library"
homepage = "https://github.com/isogenist/LiChao"
repository = "https://github.com/isogenist/LiChao"
readme = "README.md"

[dependencies]

[dev-dependencies]
rand = "0.9.1"
